# taulopBeaumont

./: Makefile.in  README.md  configure.ac
autom4te.cache/: output.3  requests  traces.0  traces.1
doc/: ReadMe
include/: arrangement.hpp  column.hpp  config.h  cost.hpp  heuristic_beaumont.hpp  rectangle.hpp
src/: Makefile.in  arrangement.cpp  column.cpp  heuristic_beaumont.cpp  main_W2D.cpp  main_beaumont.cpp  main_delta.cpp  main_malik.cpp  rectangle.cpp
taulop_modeling/: Makefile.am  config.h.in  configure
taulop_modeling/autom4te.cache/: output.0  traces.2  traces.4  traces.5
taulop_modeling/doc/: Makefile.am
taulop_modeling/include/: Makefile.am  algorithm_taulop_pbc.hpp  algorithm_taulop_pbr.hpp  heuristic_malik.hpp
taulop_modeling/src/: Makefile.am  algorithm_MxM.cpp  algorithm_W1D.cpp  algorithm_W2D.cpp  algorithm_basic.cpp  algorithm_malik.cpp  algorithm_taulop_pbc.cpp  algorithm_taulop_pbr.cpp  cost.cpp  heuristic_malik.cpp  main_W1D.cpp  main_predict.cpp  main_rearrange.cpp
