nodist_include_HEADERS = include/matrix.hpp \
  config.h \
  include/matrix_config.h \
  include/rectangle.hpp \
  include/ilist.h \
  include/heuristic.hpp \
  include/heuristic_malik.hpp \
  include/heuristic_combinatorial.hpp \
  include/heuristic_beaumont.hpp \
  include/cost.hpp \
  include/column.hpp \
  include/arrangement.hpp \
  include/algorithm.hpp \
  include/algorithm_W2D.hpp \
  include/algorithm_W1D.hpp \
  include/algorithm_taulop_pbr.hpp \
  include/algorithm_taulop_pbc.hpp \
  include/algorithm_MxM.hpp \
  include/algorithm_malik.hpp \
  include/algorithm_basic.hpp



